feat: criado caso de uso de BuscarGruposOrientados